--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NRQL Query Builder</title>
+  <title>Advanced NRQL Query Builder</title>
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <style>
+    header {
+      background-color: #0077cc;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
     :root {
       --bg: #f5f5f5;
       --text: #000;
@@ -120,6 +129,7 @@
 </head>
 
 <body data-theme="light">
+  <header>Advanced NRQL Query Builder</header>
   <div class="theme-toggle">
     <button onclick="toggleTheme()">Toggle Theme</button>
   </div>
@@ -127,7 +137,7 @@
     <div class="section">
       <h2>Table & Column Selection</h2>
       <select id="tableSelect"></select>
-      <select id="columnSelect" multiple style="width:100%"></select>
+      <select id="columnSelect" multiple style="width: 500px"></select>
     </div>
 
     <div class="section">
@@ -141,7 +151,7 @@
         <option value="max">max</option>
         <option value="sum">sum</option>
       </select>
-      <select id="aggColumn" style="width:100%"></select>
+      <select id="aggColumn" style="width:520px"></select>
     </div>
 
     <div class="section" id="timeseriesSection" style="display:none">
@@ -164,7 +174,7 @@
 
     <div class="section">
       <h2>FACET</h2>
-      <select id="facetSelect" multiple style="width:100%"></select>
+      <select id="facetSelect" multiple style="width:620px"></select>
     </div>
 
     <div class="section">
@@ -270,8 +280,8 @@
       ],
       PageView: [
         "appName", "asn", "asnLatitude", "asnLongitude", "asnOrganization", "agentVersion",
-        "appId", "appModeType", "appModeVariant", "backendDuration", "boot.launch.target", 
-        "boot.launch.version.bootstrap", "boot.launch.version.target", "browserTransactionName", 
+        "appId", "appModeType", "appModeVariant", "backendDuration", "boot.launch.target",
+        "boot.launch.version.bootstrap", "boot.launch.version.target", "browserTransactionName",
         "city", "clientIp", "connectionSetupDuration", "core.adapterVersion", "core.bootstrapVersion",
         "core.deviceBrand", "core.deviceCpuCount", "core.deviceId",
         "core.deviceManufacturer", "core.deviceModel", "core.deviceOsName",
@@ -342,6 +352,7 @@
         "sessionTraceId", "startupResponseData", "timeToLoadEventStart",
         "timestamp", "trace.id", "userId", "userStatus", "uuid", "version", "viewerId"
       ]
+
     };
 
     const state = {
