--- a/index.html
+++ b/index.html
@@ -14,18 +14,32 @@
             text-align: center;
             font-size: 24px;
             font-weight: bold;
+            font-family: 'Lucida Sans';
         }
 
         :root {
             --bg: #f5f5f5;
-            --text: #000;
+            --text: #000000;
             --card: #fff;
         }
 
         [data-theme="dark"] {
-            --bg: #1e1e1e;
-            --text: #eaeaea;
-            --card: #2e2e2e;
+            --bg: #c9c9c9;
+            --text: #ffffff;
+            --card: #060000;
+        }
+
+        [data-theme="dark"] .select2-container--default .select2-results__option {
+            color: black !important;
+        }
+
+        [data-theme="dark"] .section h2 {
+            color: white;
+        }
+
+        [data-theme="dark"] .select2-container--default .select2-selection__choice {
+            background-color: white !important;
+            color: black !important;
         }
 
         body {
@@ -48,7 +62,7 @@
             background: var(--card);
             padding: 15px;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 4px rgba(247, 246, 246, 0.1);
         }
 
         .section h2 {
@@ -143,7 +157,7 @@
         </div>
 
         <div class="section">
-            <h2>Filters (WHERE)</h2>
+            <h2>Filters (Where Condition)</h2>
             <div id="filterContainer"></div>
             <button onclick="addFilter('AND')">+ AND</button>
             <button onclick="addFilter('OR')">+ OR</button>
